tests/snapshots/sgr_snapshots__code_panel_with_highlighting.snap
---
source: tests/sgr_snapshots.rs
expression: "bytes(md, 40, &Caps::full())"
---
  \e[48;2;44;45;61m                               \e[38;2;108;112;134mrust\e[39m \e[0m
  \e[48;2;44;45;61m \e[1;38;2;203;166;247mfn\e[22;39m main() {                        \e[0m
  \e[48;2;44;45;61m     \e[1;38;2;203;166;247mlet\e[22;39m x = \e[38;2;166;227;161m"hi"\e[39m; \e[3;38;2;108;112;134m// greet\e[23;39m         \e[0m
  \e[48;2;44;45;61m }                                  \e[0m
  \e[48;2;44;45;61m                                    \e[0m
