tests/snapshots/sgr_snapshots__h1_gradient_bar.snap
---
source: tests/sgr_snapshots.rs
expression: "bytes(\"# Title\", 24, &Caps::full())"
---
  \e[1;38;2;30;30;46;48;2;137;180;250m T\e[48;2;146;179;250mit\e[48;2;154;177;249mle\e[0;48;2;162;176;249m  \e[48;2;169;174;249m  \e[48;2;176;173;248m  \e[48;2;183;171;248m  \e[48;2;190;170;248m  \e[48;2;197;168;247m  \e[48;2;203;166;247m  \e[0m
