tests/snapshots/sgr_snapshots__h2_rule_fades.snap
---
source: tests/sgr_snapshots.rs
expression: "bytes(\"## Section\", 30, &Caps::full())"
---
  \e[1;38;2;203;166;247mSection\e[0m
  \e[1;38;2;203;166;247m━━━━━━━\e[22m──\e[38;2;185;152;226m──\e[38;2;167;138;205m──\e[38;2;149;124;185m──\e[38;2;132;111;165m──\e[38;2;115;97;145m──\e[38;2;99;84;126m──\e[38;2;83;72;108m──\e[38;2;67;60;90m──\e[38;2;52;48;72m─\e[0m
