tests/snapshots/sgr_snapshots__table_header_and_zebra.snap
---
source: tests/sgr_snapshots.rs
expression: "bytes(md, 30, &Caps::full())"
---
  \e[38;2;108;112;134m╭───┬───╮\e[0m
  \e[38;2;108;112;134m│\e[0;1;48;2;44;45;61m a \e[0;38;2;108;112;134m│\e[0;1;48;2;44;45;61m b \e[0;38;2;108;112;134m│\e[0m
  \e[38;2;108;112;134m├───┼───┤\e[0m
  \e[38;2;108;112;134m│\e[0m 1 \e[38;2;108;112;134m│\e[0m 2 \e[38;2;108;112;134m│\e[0m
  \e[38;2;108;112;134m│\e[0;48;2;39;40;57m 3 \e[0;38;2;108;112;134m│\e[0;48;2;39;40;57m 4 \e[0;38;2;108;112;134m│\e[0m
  \e[38;2;108;112;134m╰───┴───╯\e[0m
